# bufson

./: LICENSE  README.md  pyproject.toml  x.py
src/: bufson.py
tests/data/projects/flit-core/: pyproject.toml
tests/data/projects/hatchling/: pyproject.toml
tests/data/projects/maturin/: pyproject.toml
tests/data/projects/pdm-pep517/: pyproject.toml
tests/data/projects/poetry-core/: pyproject.toml
